--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -19,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
@@ -29,11 +29,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //RecyclerView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    //Jackson
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.6'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+    //Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     //Retrofit
     implementation 'com.squareup.retrofit2:converter-jackson:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
@@ -49,4 +48,6 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
 //Cicerone
     implementation 'ru.terrakok.cicerone:cicerone:1.0'
+    //Realm
+    implementation 'io.realm:realm-android:0.87.5'
 }
