--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
         jcenter()
         
     }
-
+    dependencies {
+        classpath "io.realm:realm-gradle-plugin:3.5.0"
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         // NOTE: Do not place your application dependencies here; they belong
