-assigned tasks`re completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,18 +39,19 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //Moxy
-    implementation'com.arello-mobile:moxy:1.5.5'
+    implementation 'com.arello-mobile:moxy:1.5.5'
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.5'
     implementation 'com.arello-mobile:moxy-android:1.5.5'
     implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'org.jetbrains:annotations-java5:15.0'
-//Cicerone
+    //Cicerone
     implementation 'ru.terrakok.cicerone:cicerone:1.0'
-    //Realm
-    //Rx
+
+    //Rx(Пока не пригодилась)
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.1.6'
 
